test/libsolidity/syntaxTests/nameAndTypeResolution/070_struct_accessor_one_array_only.sol
contract test {
    struct Data { uint[15] m_array; }
    Data public data;
}
// ----
// TypeError: (58-74): Internal or recursive type is not allowed for public state variables.
